--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<link rel="canonical" href="https://mini.sampa.br" />
 	<meta property="og:url" content="https://mini.sampa.br" />
 	<meta property="og:site_name" content="Mini Sampa 3D" />
-	<meta property="og:image" content="https://mini.sampa.br/images/img.png" />
+	<meta content="https://mini.sampa.br/images/screenshot.png" property="og:image"/>
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:site" content="@allanf181" />
 </head>
